[gd_scene load_steps=12 format=3 uid="uid://dpm3eishnn7dd"]

[ext_resource type="Script" path="res://Menu/Player Menu/PlayerMenuScripts/Player_Menu.gd" id="1_j7mvx"]
[ext_resource type="Texture2D" uid="uid://btv1hk271nm3f" path="res://Assets/UI/UI_Flat_Banner_02_Downward.png" id="2_h1fvb"]
[ext_resource type="PackedScene" uid="uid://bbwufrwgjp7oo" path="res://Menu/Player Menu/inventory_container.tscn" id="3_7qjph"]
[ext_resource type="PackedScene" uid="uid://mludnrhfsb7i" path="res://Menu/Player Menu/inventory_items.tscn" id="4_f8s5d"]
[ext_resource type="PackedScene" uid="uid://b2lpyrt22y6n" path="res://Menu/Main Menu/settings_tab_container.tscn" id="5_nphbe"]
[ext_resource type="PackedScene" uid="uid://d4hkro4xymogt" path="res://Menu/Player Menu/Exit_ConfirmationDialog.tscn" id="6_51gbx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f4taa"]

[sub_resource type="SystemFont" id="SystemFont_hm8e7"]
font_names = PackedStringArray("Monospace")
font_weight = 600
subpixel_positioning = 0
multichannel_signed_distance_field = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k8xwv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uyg76"]
bg_color = Color(0.6, 1, 0, 0.678431)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hpf07"]
bg_color = Color(0.6, 1, 0, 0.678431)

[node name="Player_Menu" type="Camera2D"]
script = ExtResource("1_j7mvx")

[node name="Menu_Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -537.0
offset_top = -359.0
offset_right = 544.0
offset_bottom = 361.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Player_Menu_Container" type="VBoxContainer" parent="Menu_Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Player_Data_Container" type="HBoxContainer" parent="Menu_Margin/Player_Menu_Container"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Menu_BG" type="NinePatchRect" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
texture = ExtResource("2_h1fvb")
region_rect = Rect2(10, 0, 81, 31)
patch_margin_left = 8
patch_margin_top = 9
patch_margin_right = 12
patch_margin_bottom = 11

[node name="MarginContainer" type="MarginContainer" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15

[node name="Player_Menu_Btn_Clstr" type="VBoxContainer" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_f4taa")

[node name="ID_btn" type="Button" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr"]
custom_minimum_size = Vector2(220, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_hm8e7")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_k8xwv")
theme_override_styles/hover = SubResource("StyleBoxFlat_uyg76")
theme_override_styles/focus = SubResource("StyleBoxFlat_hpf07")
text = " Player_name
"
alignment = 0

[node name="HSeparator2" type="HSeparator" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_f4taa")

[node name="Equipment_btn" type="Button" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr"]
custom_minimum_size = Vector2(220, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_hm8e7")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_k8xwv")
theme_override_styles/hover = SubResource("StyleBoxFlat_uyg76")
theme_override_styles/focus = SubResource("StyleBoxFlat_hpf07")
text = " Equipment
"
alignment = 0

[node name="HSeparator3" type="HSeparator" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_f4taa")

[node name="Item_btn" type="Button" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr"]
custom_minimum_size = Vector2(220, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_hm8e7")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_k8xwv")
theme_override_styles/hover = SubResource("StyleBoxFlat_uyg76")
theme_override_styles/focus = SubResource("StyleBoxFlat_hpf07")
text = " Items
"
alignment = 0

[node name="HSeparator4" type="HSeparator" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_f4taa")

[node name="Ability_btn" type="Button" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr"]
custom_minimum_size = Vector2(220, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_hm8e7")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_k8xwv")
theme_override_styles/hover = SubResource("StyleBoxFlat_uyg76")
theme_override_styles/focus = SubResource("StyleBoxFlat_hpf07")
text = " Abilities
"
alignment = 0

[node name="HSeparator5" type="HSeparator" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_f4taa")

[node name="Settings" type="Button" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr"]
custom_minimum_size = Vector2(220, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_hm8e7")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_k8xwv")
theme_override_styles/hover = SubResource("StyleBoxFlat_uyg76")
theme_override_styles/focus = SubResource("StyleBoxFlat_hpf07")
text = " Settings
"
alignment = 0

[node name="HSeparator6" type="HSeparator" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_f4taa")

[node name="Exit" type="Button" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr"]
custom_minimum_size = Vector2(220, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_hm8e7")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_k8xwv")
theme_override_styles/hover = SubResource("StyleBoxFlat_uyg76")
theme_override_styles/focus = SubResource("StyleBoxFlat_hpf07")
text = " Exit Game
"
alignment = 0

[node name="Information_Container" type="VBoxContainer" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_horizontal = 3

[node name="Inventory_Container" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Information_Container" instance=ExtResource("3_7qjph")]
visible = false
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_vertical = 1

[node name="Inventory_Items" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Information_Container/Inventory_Container/Panel/MarginContainer" index="1" instance=ExtResource("4_f8s5d")]
visible = false
layout_mode = 2

[node name="Settings_tab_container" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Information_Container" instance=ExtResource("5_nphbe")]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Tab_Container" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Information_Container/Settings_tab_container" index="0"]
anchors_preset = 15
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Exit_ConfirmationDialog" parent="Menu_Margin/Player_Menu_Container/Player_Data_Container/Information_Container" instance=ExtResource("6_51gbx")]
visible = false

[connection signal="button_down" from="Menu_Margin/Player_Menu_Container/Player_Data_Container/Menu_BG/MarginContainer/Player_Menu_Btn_Clstr/Equipment_btn" to="." method="_on_equipment_btn_button_down"]
[connection signal="confirmed" from="Menu_Margin/Player_Menu_Container/Player_Data_Container/Information_Container/Exit_ConfirmationDialog" to="." method="on_exit_confirmed"]
[connection signal="confirmed" from="Menu_Margin/Player_Menu_Container/Player_Data_Container/Information_Container/Exit_ConfirmationDialog" to="." method="_on_exit_confirmation_dialog_confirmed"]

[editable path="Menu_Margin/Player_Menu_Container/Player_Data_Container/Information_Container/Inventory_Container"]
[editable path="Menu_Margin/Player_Menu_Container/Player_Data_Container/Information_Container/Settings_tab_container"]
